[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-fold-gha"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
authors = [
    {name = "Martín Gaitán", email = "marting@shiphero.com"}
]
dynamic = ["version", "description"]

[tool.flit.module]
name = "pytest_gha_logs_fold"

[tool.black]
line-length = 120
target-version = ["py38"]
color = true

[project.urls]
Homepage = "https://github.com/mgaitan/pytest-gha-logs-fold"

[project.entry-points.pytest11]
fold_gha = "pytest_gha_logs_fold"